--- a/app/views/libraries/new.html.erb
+++ b/app/views/libraries/new.html.erb
@@ -8,13 +8,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :desctiption %>
-    <%= f.text_field :desctiption, autofocus: true, autocomplete: "Description" %>
+    <%= f.label :address %>
+    <%= f.text_field :address, autofocus: true, autocomplete: "Address" %>
   </div>
 
   <div class="field">
-    <%= f.label :address %>
-    <%= f.text_field :address, autofocus: true, autocomplete: "Description" %>
+    <%= f.label :description %>
+    <%= f.text_area :description, autofocus: true, autocomplete: "Description" %>
   </div>
 
   <%= f.submit "Submit" %>
