--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Clients#edit</h1>
-<p>Find me in app/views/clients/edit.html.erb</p>
+<h1 class="page-header">Edit Client - <%= @client.first_name %> <%= @client.second_name %></h1>
+
+
+<%= form_for [@library, @client] do |f| %>
+  
+  <div class="form-group">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "First Name", class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :second_name %>
+    <%= f.text_field :second_name, autofocus: true, autocomplete: "Second Name", class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :library %>
+    <%= f.select :library_id, Library.all.collect {|x| [x.name, x.id]}, {:include_blank => "Select Library"}, class: 'form-control' %>
+  </div>
+
+  <%= f.submit "Submit", class: 'btn btn-info' %>
+  <%= link_to "Cancel", library_path(@library), class: 'btn btn-secondary' %>
+
+<% end %>
