--- a/app/views/libraries/edit.html.erb
+++ b/app/views/libraries/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Libraries#edit</h1>
-<p>Find me in app/views/libraries/edit.html.erb</p>
+<h1 class="page-header">Edit Library</h1>
+
+<%= form_for @library do |f| %>
+  
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "Library Name", class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :address %>
+    <%= f.text_field :address, autofocus: true, autocomplete: "Address", class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, autofocus: true, autocomplete: "Description", class: 'form-control' %>
+  </div>
+
+  <%= f.submit "Submit", class: 'btn btn-info' %>
+  <%= link_to "Cancel", libraries_path, class: 'btn btn-secondary' %>
+
+<% end %>
