--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -1,27 +1,28 @@
-<h1>Libraries</h1>
+<h1 class="page-header">Libraries <%= link_to "Add New", libraries_new_path, :class => "btn btn-success", :role => "button" %>
+</h1><br>
 
-<%= current_user.email %> <br>
-<%= current_user.first_name %>
-<%= current_user.last_name %><br>
 
-<%= link_to('Logout', destroy_user_session_path, method: :delete) %><br><br>
-<%= link_to('Add Library', libraries_new_path) %><br><br>
-
-<table> 
+<table class="table table-striped table-sm"> 
   <tr>
-    <th> Name </th>
-    <th> Address </th>
-    <th> Description</th>
-    <th> Clients</th>
-    <th> View </th>
+    <th>#</th>
+    <th><%= link_to "Name", :sort => "name" %></th>
+    <th><%= link_to "Address", :sort => "address" %> </th>
+    <th>Description</th>
+    <th>Clients</th>
+    <th> </th>
   </tr>
-  <% @libraries.each do |library| %>
+  <% @libraries.each_with_index do |library, index| %>
     <tr>
+      <td><%= index + 1 %></td>
       <td><%= library.name %></td>
       <td><%= library.address %></td>
       <td><%= library.description %></td>
-      <td>Clients<td>
-      <td><%= link_to "View Library", library_path(library) %></td>
-    </tr> 
+      <td><%= Client.where(library_id: library.id).count %></td>
+      <td>
+        <%= link_to "View ", library_path(library), :class => "btn btn-info btn-sm", :role => "button" %>
+        <%= link_to "Edit", edit_library_path(library), :class => "btn btn-warning btn-sm", :role => "button" %>
+        <%= link_to "Delete", library_path(library), :class => "btn btn-danger btn-sm", :role => "button", method: :delete, data: {confirm: "Are you sure?"} %>
+      </td>
+    </tr>
   <% end %>
 </table>
