--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,23 +1,25 @@
-<h1><%= @library.name %></h1>
+<h1 class="page-header"><%= @library.name %></h1>
+<h5> Address - <%= @library.address %></h5>
+<h5>Description - <%= @library.description%></h5>
 
-<p>Adress - <%= @library.address %></p>
-<p>Description - <%= @library.description%></p>
+<h2><%= link_to "Add New Client", new_library_client_path(@library), :class => "btn btn-success btn-sm", :role => "button" %></h2>
 
-
-<p>Clients <%= link_to "Add Client", clients_new_path(@library.id) %> </p>
-<table>
+<table class="table table-striped table-sm">
   <tr>
     <th>#</th>
     <th>First name</th>
     <th>Second name</th>
+    <th></th>
   </tr>
-  <% @clients.each do |client| %>
+  <% @clients.each_with_index do |client, index| %>
     <tr>
-      <td><%= client.id %></td>
+      <td><%= index + 1 %></td>
       <td><%= client.first_name %></td>
       <td><%= client.second_name %></td>
+      <td>
+        <%= link_to "Edit", edit_library_client_path(@library, client), :class => "btn btn-warning btn-sm", :role => "button" %>
+        <%= link_to "Delete", library_client_path(@library, client), :class => "btn btn-danger btn-sm", :role => "button", method: :delete, data: {confirm: "Are you sure?"} %>
+      </td>
     </tr>
   <% end %>
-
-
 </table>
