--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -1,6 +1,8 @@
 <h1 class="page-header">Libraries <%= link_to "Add New", libraries_new_path, :class => "btn btn-success", :role => "button" %>
 </h1><br>
 
+<%= @var %>
+
 
 <table class="table table-striped table-sm"> 
   <tr>
@@ -8,7 +10,7 @@
     <th><%= link_to "Name", :sort => "name" %></th>
     <th><%= link_to "Address", :sort => "address" %> </th>
     <th>Description</th>
-    <th>Clients</th>
+    <th><%= link_to "Clients", :sort => "clients" %></th>
     <th> </th>
   </tr>
   <% @libraries.each_with_index do |library, index| %>
