--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Clients#show</h1>
-<p>Find me in app/views/clients/show.html.erb</p>
+<h1 class="page-header"><%= @client.first_name %> <%= @client.second_name %></h1>
+<h5> This is client of <%= @library.name %></h5>
