--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -1,7 +1,5 @@
-<h1 class="page-header">Libraries <%= link_to "Add New", libraries_new_path, :class => "btn btn-success", :role => "button" %>
+<h1 class="page-header">Libraries <%= link_to "Add New", new_library_path, :class => "btn btn-success", :role => "button" %>
 </h1><br>
-
-<%= @var %>
 
 
 <table class="table table-striped table-sm"> 
